// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Drip's trackEvent destination action: all fields 1`] = `
Object {
  "events": Array [
    Object {
      "action": "CLmReJ&VtW3mSC%2p(",
      "email": "voejili@joh.es",
      "properties": Object {
        "testType": "CLmReJ&VtW3mSC%2p(",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Drip's trackEvent destination action: required fields 1`] = `
Object {
  "events": Array [
    Object {
      "action": "CLmReJ&VtW3mSC%2p(",
      "email": "voejili@joh.es",
    },
  ],
}
`;
